# cloud-cost-compliance-automation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: sample_report.json  sample_sns_notification.txt
infrastructure/cloudformation/: README.md  template.yaml
infrastructure/terraform/: config_recorder.tf.example  config_rules.tf  iam_config_rules.tf  iam_scanner.tf  lambda_config_rules.tf  lambda_package.tf  lambda_scanner.tf  main.tf  outputs.tf  s3.tf  sns.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build_lambda_package.sh  run_local_scan.sh
src/cloud_compliance_scanner/: __init__.py  cli.py  config.py  lambda_handler.py  models.py  orchestrator.py
src/cloud_compliance_scanner/config_rules/: config_evaluator.py  ebs_encryption_rule.py  required_tags_rule.py  security_group_rule.py
src/cloud_compliance_scanner/reporting/: formatters.py  s3_archiver.py  sns_publisher.py
src/cloud_compliance_scanner/scanners/: base.py  idle_ec2.py  idle_load_balancer.py  stale_snapshots.py  unattached_ebs.py  unused_eip.py
src/cloud_compliance_scanner/utils/: cloudwatch_helper.py  logging_utils.py
tests/: conftest.py
tests/unit/: test_config_rules.py  test_formatters.py  test_idle_ec2.py  test_idle_load_balancer.py  test_lambda_handler.py  test_orchestrator.py  test_s3_archiver.py  test_sns_publisher.py  test_stale_snapshots.py  test_unattached_ebs.py  test_unused_eip.py
