[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-compliance-scanner"
version = "1.0.0"
description = "Python/Boto3 automation that scans for idle/unused AWS resources and reports findings via SNS, paired with AWS Config rules for ongoing compliance drift detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shravan" }
]
keywords = ["aws", "boto3", "finops", "cost-optimization", "compliance", "aws-config", "lambda"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[ec2,elbv2,cloudwatch,sns,s3,sts,config]>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "boto3-stubs[ec2,elbv2,cloudwatch,sns,s3,sts,config]>=1.34.0",
]

[project.scripts]
cloud-compliance-scan = "cloud_compliance_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
